[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Images/SpaceShip/playerShip1_blue.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Effects/fire16.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Effects/fire17.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Effects/fire15.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Effects/fire14.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/Effects/shield2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Effects/shield1.png" type="Texture" id=7]
[ext_resource path="res://Scenes/SpaceShip.gd" type="Script" id=8]
[ext_resource path="res://Assets/Audio/thrusterFire_000.ogg" type="AudioStream" id=9]
[ext_resource path="res://Assets/Audio/forceField_000.ogg" type="AudioStream" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Fire",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 69.0072

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "Shield",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 7.59193
height = 20.129

[sub_resource type="CapsuleShape2D" id=5]
radius = 7.8909
height = 33.2562

[node name="SpaceShip" type="Node2D"]
script = ExtResource( 8 )

[node name="FireFront" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Fire"
frame = 1
offset = Vector2( 0, -22 )

[node name="TimerFireFront" type="Timer" parent="FireFront"]
autostart = true

[node name="FireLeft" type="AnimatedSprite" parent="."]
rotation = -0.20944
frames = SubResource( 1 )
animation = "Fire"
frame = 1
speed_scale = 2.0
offset = Vector2( -20, -12 )

[node name="TimerFireLeft" type="Timer" parent="FireLeft"]
autostart = true

[node name="FireRight" type="AnimatedSprite" parent="."]
rotation = 0.20944
frames = SubResource( 1 )
animation = "Fire"
frame = 1
speed_scale = 2.0
offset = Vector2( 20, -12 )

[node name="TimerFireRight" type="Timer" parent="FireRight"]
autostart = true

[node name="Shield" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Shield"]
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="ShieldPaint" type="AnimatedSprite" parent="Shield"]
frames = SubResource( 3 )
animation = "Shield"
playing = true
offset = Vector2( 0, -25 )

[node name="AudioShield" type="AudioStreamPlayer" parent="Shield"]
stream = ExtResource( 10 )

[node name="Ship" type="Area2D" parent="."]

[node name="Hull" type="CollisionShape2D" parent="Ship"]
shape = SubResource( 4 )

[node name="Wings" type="CollisionShape2D" parent="Ship"]
position = Vector2( 0, 3.7818 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="ShipPaint" type="Sprite" parent="Ship"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="UpdateStatus" type="Timer" parent="."]
autostart = true

[node name="AudioThruster" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[connection signal="timeout" from="FireFront/TimerFireFront" to="." method="_on_TimerFireFront"]
[connection signal="timeout" from="FireLeft/TimerFireLeft" to="." method="_on_TimerFireLeft"]
[connection signal="timeout" from="FireRight/TimerFireRight" to="." method="_on_TimerFireRight"]
[connection signal="timeout" from="UpdateStatus" to="." method="_on_UpdateStatus_timeout"]
